# norcoast-ambience-app

./: .gitignore  README.md  STYLE_GUIDE.md  package.json
.github/workflows/: deploy.yml
NorcoastAudio/: ContentView.swift  Info.plist  NorcoastAudioApp.swift  WebView.swift
NorcoastAudio.xcodeproj/: project.pbxproj
NorcoastAudio/Assets.xcassets/AccentColor.colorset/: Contents.json
NorcoastAudio/Assets.xcassets/LaunchBackground.colorset/: Contents.json
ci_scripts/: ci_post_clone.sh
ios/: project.yml  setup.sh
ios/NorcoastAmbience/: Info.plist  NorcoastAmbience.entitlements  SceneDelegate.swift  ViewController.swift
ios/NorcoastAmbience.xcodeproj/: project.pbxproj
ios/NorcoastAmbience/Resources/: LaunchScreen.storyboard
ios/NorcoastAmbience/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/NorcoastAmbience/Resources/Assets.xcassets/LaunchBackgroundColor.colorset/: Contents.json
ios/NorcoastAudio/: WebView.swift
ios/NorcoastAudio.xcodeproj/: project.pbxproj
plugin/: CMakeLists.txt  README.md
plugin/Source/: Arpeggiator.h  BitmaskPillRow.h  ChoiceButtonRow.h  ChordEvolver.h  ChordStateHeader.h  DattorroReverb.h  DrumMachine.h  EqCurveDisplay.h  FaderSlider.h  GranularPitchShift.h  LatchableKeyboard.h  LayerConfig.h  NorcoastLookAndFeel.h  Oscilloscope.h  PadSound.h  PadVoice.cpp  PadVoice.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h  Shimmer.h  SmbPitchShift.h  StepSequencerGrid.h  Texture.cpp  Texture.h  Waves.cpp  Waves.h  Wavetable.h
public/: dattorro-reverb-worklet.js  index.html  manifest.json  phase-vocoder-worklet.js  pitch-shifter-worklet.js  sw.js
public/ambience/: index.html  norcoast-ambience.html
public/monitor/: index.html
